After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 753448 - Header bar not updated when back/forward list changes
Header bar not updated when back/forward list changes
Status: RESOLVED FIXED
Product: yelp
Classification: Applications
Component: General
3.17.x
Other Linux
: Normal normal
: ---
Assigned To: Michael Catanzaro
Yelp maintainers
Depends on:
Blocks:
 
 
Reported: 2015-08-10 10:53 UTC by Michael Catanzaro
Modified: 2015-08-17 17:37 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Update current page information when loaded from history cache (4.91 KB, patch)
2015-08-13 12:24 UTC, Carlos Garcia Campos
committed Details | Review

Description Michael Catanzaro 2015-08-10 10:53:57 UTC
The header bar title and subtitle are not updated when returning to a Mallard index page with the back button. This works fine in 3.16 so probably we broke it during the WebKit port.
Comment 1 Michael Catanzaro 2015-08-10 11:11:10 UTC
Actually the bug is easier: the header bar is simply not updated when using back/forward.
Comment 2 Carlos Garcia Campos 2015-08-13 12:24:08 UTC
Created attachment 309203 [details] [review]
Update current page information when loaded from history cache
Comment 3 David King 2015-08-17 17:36:14 UTC
Review of attachment 309203 [details] [review]:

Works for me, thanks! Pushed to master as commit 154fcdace0f633d9a07e83fe13e9b53849d973eb.